<resources>
    <string name="app_name">QuizAppGame</string>
    <string name="welcome"><![CDATA[Quiz&Win]]></string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account</string>
    <string name="login">Login</string>
    <string name="create_the_account">Create The Account</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="show_in_main">Show in main</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="question">Question</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="show">Show</string>
    <string name="correct_option">Correct Option :</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="accept_question">Accept Question</string>
    <string name="solve_this">Solve this</string>
    <string name="next">Next</string>
</resources>